logs/pydvkbiology.log
Listing '.'...
Listing './bin'...
Compiling './bin/cols.py'...
***   File "./bin/cols.py", line 54
    print 'colIdx', colIdx
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pydvkbiology'...
Listing './lib/python3.5/site-packages/pydvkbiology/NCBI'...
Compiling './lib/python3.5/site-packages/pydvkbiology/NCBI/ESearch_Action_Helpers.py'...
***   File "./lib/python3.5/site-packages/pydvkbiology/NCBI/ESearch_Action_Helpers.py", line 165
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pydvkbiology/NCBI/cols.py'...
***   File "./lib/python3.5/site-packages/pydvkbiology/NCBI/cols.py", line 54
    print 'colIdx', colIdx
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pydvkbiology/UCSC'...
Listing './lib/python3.5/site-packages/pydvkbiology/dnld'...
Listing './lib/python3.5/site-packages/pydvkbiology/kaplanmeier'...
Listing './lib/python3.5/site-packages/pydvkbiology/matplotlib'...
Listing './lib/python3.5/site-packages/pydvkbiology/util'...
Listing './lib/python3.5/site-packages/pydvkbiology/weblogo'...
Listing './lib/python3.5/site-packages/pydvkbiology-0.44.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
